--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
     "camelcase": [2, {"properties": "always"}],
     "semi": [2, "always"],
     "no-mixed-spaces-and-tabs": [2, "smart-tabs"],
+    "no-extra-boolean-cast": 0,
     "angular/ng_di": [2, "array"],
     "angular/ng_window_service": 0,
     "angular/ng_document_service": 0
