--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,8 @@
     "no-extra-boolean-cast": 0,
     "angular/ng_di": [2, "array"],
     "angular/ng_window_service": 0,
-    "angular/ng_document_service": 0
+    "angular/ng_document_service": 0,
+    "comma-dangle": 0,
   },
   "globals": {
     "_": true,
