--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
     "angular/ng_window_service": 0,
     "angular/ng_document_service": 0,
     "comma-dangle": 0,
+    "key-spacing": [2, { "align": "value" }]
   },
   "globals": {
     "_": true,
