--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,7 @@
   "globals": {
     "_": true,
     "angular": true,
+    "mohican": true,
     "moment": true,
     "require": true,
     "browser": true,
