--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,7 @@
   },
   "rules": {
     "no-console": 0,
-    "comma-dangle": [2, "always-multiline"],
+    "comma-dangle": [2, "never"],
     "no-underscore-dangle": 0,
     "space-in-parens": [2, "never"],
     "space-before-blocks": [2, "always"],
@@ -21,7 +21,6 @@
     "angular/ng_di": [2, "array"],
     "angular/ng_window_service": 0,
     "angular/ng_document_service": 0,
-    "comma-dangle": 0,
     "key-spacing": [2, { "align": "value" }]
   },
   "globals": {
