orders scaffold, bit brokent, but awesome seeds
Scaffold is broken in a sense that new order cannot be really
created as user cannot be specified. Otherwise it works quite
fine for very basic data. Event deleting works.

But seeding is as fast as it would ever be with Mongoid.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -23,6 +23,9 @@ Metrics/MethodLength:
 Style/ClassAndModuleChildren:
   Enabled: false
 
+ClassLength:
+  Enabled: false
+
 Style/RegexpLiteral:
   Description: >-
                  Use %r for regular expressions matching more than
