--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "url": "https://github.com/zmilojko/id5.git"
   },
   "devDependencies": {
-    "eslint": "^0.22.0",
-    "eslint-plugin-angular": "0.0.7"
+    "eslint": "^1.0.0",
+    "eslint-plugin-angular": "^0.2.2"
   }
 }
